app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trComponentsNavToTRVF__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trComponentsNavToTRVF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting makes lightning components navigate to the TaskRay Visualforce page instead of record homes.</inlineHelpText>
        <label>Components Nav to TaskRay</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>