app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trIsScratchOrg__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trIsScratchOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, TaskRay will behave properly in a scratch org with the TASKRAY namespace.</description>
        <label>Is Scratch Org? (Bracket Labs Only)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>