app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trListColor_1__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trListColor_1__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
</CustomObject>