app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trNotificationAge__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trNotificationAge__c</fullName>
        <label>Maximum Notification Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>