app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTasksInternalOnlyByDefault__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trTasksInternalOnlyByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls the default value of the Internal Only field on Tasks</description>
        <inlineHelpText>This setting controls the default value of the Internal Only field on Tasks</inlineHelpText>
        <label>Mark tasks as internal only by default</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>