app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTimeDisplayTypeField__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trTimeDisplayTypeField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show the Type field on time entries</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>