app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trUseDefaultSharingReason__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trUseDefaultSharingReason__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting does not use the &quot;Added to TaskRay Project Team&quot; sharing reason. Not using this reason allows Tasks to be assigned to a High Volume external user.</inlineHelpText>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>